[project]
name = "pyuno-game"
version = "0.2.0a1"
requires-python = ">=3.11"
description = "A uno game"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dorapower", email = "thatisluo@outlook.com"}
]
keywords = [
    "uno",
    "game",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed",
]
dependencies = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Dorapower/Uno-Game"
Documentation = "https://github.com/Dorapower/Uno-Game/wiki"
Repository = "https://github.com/Dorapower/Uno-Game.git"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
